# voicefuse

./: .gitignore  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  pyproject.toml  voicefuse.yaml.example
.github/workflows/: ci.yml
examples/: basic_tts.py  compare_providers.py  fallback.py
tests/: test_client.py  test_config.py  test_exceptions.py  test_router.py  test_types.py  test_voice_map.py
tests/cli/: test_benchmark_cmd.py  test_compare_cmd.py  test_providers_cmd.py  test_tts_cmd.py  test_voices_cmd.py
tests/providers/: test_base.py  test_elevenlabs.py  test_google.py  test_openai.py
voicefuse/: __init__.py  client.py  config.py  exceptions.py  router.py  types.py  voice_map.py
voicefuse/cli/: benchmark_cmd.py  compare_cmd.py  main.py  providers_cmd.py  tts_cmd.py  utils.py  voices_cmd.py
voicefuse/providers/: __init__.py  base.py  elevenlabs.py  google.py  openai.py
