[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voicefuse"
version = "0.1.0"
description = "LiteLLM for Voice — One API for every Voice AI provider"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "daewook" },
]
keywords = ["voice", "ai", "tts", "speech", "openai", "elevenlabs", "google"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
voicefuse = "voicefuse.cli.main:cli"

[project.optional-dependencies]
play = ["playsound3>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/daewook/voicefuse"
Repository = "https://github.com/daewook/voicefuse"
Issues = "https://github.com/daewook/voicefuse/issues"
